# marpo_system

./: pyproject.toml
alembic/: env.py
alembic/versions/: 05fbdb7027e7_idaddedtable.py  2782049668b5_sale_details_buy_and_sell_price_added.py  2ac299943337_relationships.py  bf69bc22975b_sale_datail_relationship.py  c8ba2e311e15_updateproducttableorder.py
app/: main.py
app/api/: api.py
app/api/products/: onlineShearch.py  product.py
app/api/sells/: sells.py
app/core/: config.py
app/crud/: crud_products.py  crud_sales.py  crud_sells.py  db.py
app/db/: base.py
app/extension/: AddDataDB.py  AddFromPuntodeVenta.py
app/models/: __init__.py  products.py  sale.py  sale_details.py
app/schemas/: __init__.py  poducts.py  products.py  sale.py  sells.py
assets/data/: catalogo.csv  catalogoDun.csv  catalogo_utf8.csv
crud/: crud_products.py
